# chatt

./: .gitignore  .gitlab-ci.yml  BUILDING.md  Cargo.toml  README.md  chatt-server.toml  chatt.toml  devsm.toml  tomchat-server.toml  tomchat.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
analysis/: pop_analysis.py  pyproject.toml
assets/: notifications.pcm  notifications.sections  sample-001.opus
assets/mls-e2e-regressions/: core-lifecycle.trace  create-link-after-live-restart.trace  device-link-invalidated-by-revocation.trace  offline-peer-catches-up-link-and-revoke.trace  revoke-newly-linked-device.trace  ui-ack-during-live-restart.trace  upload-outcomes.trace  view-during-initial-room-setup.trace
crates/benchmark/: Cargo.toml  README.md
crates/benchmark/examples/: build_notifications.rs  export_live_audio.rs
crates/benchmark/src/: crypto.rs  main.rs
crates/bwrap/: Cargo.toml  README.md
crates/cpal/: Cargo.toml
crates/darkhttp/: Cargo.toml
crates/ids/: Cargo.toml
crates/local-rpc/: Cargo.toml
crates/message-format/: Cargo.toml
crates/mls/: Cargo.toml  README.md
crates/mls-rs/: CHATT-VENDOR.md  Cargo.toml  webdriver.json
crates/mls-rs-core/: Cargo.toml
crates/mls-rs-crypto-awslc/: Cargo.toml
crates/mls-rs-crypto-hpke/: Cargo.toml
crates/mls-rs-crypto-traits/: Cargo.toml
crates/mls-rs-crypto-traits/src/: dh.rs  kdf.rs  kem.rs
crates/mls-rs-identity-x509/: Cargo.toml
crates/mls-rs-provider-redb/: Cargo.toml  README.md
crates/mls-rs-provider-redb/src/: application.rs  group_state.rs  key_package.rs  lib.rs  psk.rs
crates/mls-rs-provider-redb/tests/: mls_client.rs  provider.rs
crates/mls/src/: bootstrap.rs  installation.rs  lib.rs  persistent.rs  policy.rs  server.rs
crates/mls/tests/: persistent.rs  runtime.rs
crates/nnnoiseless/: Cargo.toml  build.rs
crates/nnnoiseless/c-rnnoise/include/: rnnoise.h
crates/nnnoiseless/c-rnnoise/src/: denoise.c  rnnoise_data.c
crates/nnnoiseless/examples/: denoise_sweep.rs
crates/nnnoiseless/src/: denoise.rs  lib.rs  util.rs  v2.rs
crates/opus-codec/: .gitignore  Cargo.toml  README.md  build.rs  dnn_weights.rs
crates/opus-codec/.github/workflows/: ci.yml
crates/opus-codec/examples/: basic_example.rs
crates/opus-codec/opus/: .gitignore
crates/opus-codec/scripts/: ci_utils.py  verify_avx.py  verify_system_lib.py  verify_windows_static_crt.py
crates/opus-codec/src/: alloc.rs  bindings.rs  constants.rs  decoder.rs  dred.rs  encoder.rs  error.rs  lib.rs  multistream.rs  packet.rs  projection.rs  raw.rs  repacketizer.rs  types.rs
crates/opus-codec/src/packet/: layout.rs
crates/opus-codec/src/packet/layout/: extensions.rs
crates/opus-codec/tests/: decoder_ctls.rs  dnn_weights.rs  encoder_ctls.rs  encoder_decoder.rs  ffmpeg_roundtrip.rs  multhithread.rs  multistream.rs  packet_padding.rs  packet_utils.rs  projection.rs  projection_roundtrip.rs  raw_alloc.rs  repacketizer.rs
crates/opus-codec/tools/: gen-dnn-weights.rs
crates/p2p/: Cargo.toml
crates/pathify_svg/: Cargo.toml
crates/pipewire-sys/: Cargo.toml  build.rs
crates/pipewire-sys/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: base32.rs  control.rs  crypto.rs  e2e.rs  evented.rs  frame.rs  history.rs  identity.rs  ids.rs  lib.rs  media.rs  mls.rs  msgref.rs  qos.rs  recv.rs  video.rs
crates/rpc/src/bitstream/: h264.rs  hevc.rs  mod.rs
crates/rpc/src/daemon/: bulk.rs  frame.rs  mod.rs  model.rs  unix.rs
crates/server/: Cargo.toml
crates/server/src/: bug_report_writer.rs  config.rs  config_diagnostics.rs  device_directory.rs  event_queue.rs  history_reader.rs  identity_writer.rs  key_store.rs  lib.rs  local_admin.rs  main.rs  mls_delivery.rs  mls_service.rs  mls_store.rs  room_state.rs  room_store.rs  user_store.rs  username_registry.rs  verification_sync_store.rs  voice_relay.rs
crates/sonora/: README.md
crates/video/: Cargo.toml
dev/: chatt-alice.toml  chatt-bob.toml  chatt-server.toml  chatt-soundboard.toml  plaintext-server.toml  private-server.toml  public-server.toml
dev/plaintext-server-data/: users.toml
dev/private-server-data/: users.toml
dev/public-server-data/: users.toml
docs/: chatt-markdown-subset.md  encryption-protocol.md  extui.md  latency.md  p2p-traversal.md
examples/: denoise_gate_probe.rs
scripts/: build-release-mold-full-lto.sh  build-release-mold-icf.sh  clang-lto-cc-wrapper.sh  fetch-mls-test-data.sh
src/: attach.rs  audio.rs  bench_upload.rs  bindings.rs  chat_buffer.rs  cli.rs  client_channel.rs  client_net.rs  clipboard.rs  clipboard_paste.rs  config.rs  config_diagnostics.rs  device_link.rs  e2e.rs  e2e_identity.rs  e2e_store.rs  e2e_test.rs  file_compression.rs  fuzzy.rs  highlight.rs  lib.rs  link.rs  local_control.rs  main.rs  markdown.rs  mdns.rs  mls_e2e_test.rs  mls_scenario_test.rs  network.rs  packet_log.rs  paths.rs  receive_store.rs  room_catalog.rs  room_history.rs  runtime.rs  self_log.rs  settings.rs  test_alloc.rs  test_temp.rs  theme.rs  (+3 more)
src/app/: audio_diagnostics.rs  audio_supervisor.rs  command.rs  commands.rs  device_pair.rs  dialogs.rs  frontend.rs  mod.rs  pairing.rs  participants.rs  room.rs  room_settings.rs  server.rs  shared.rs  testing.rs
src/audio/: backend.rs  callback.rs  device.rs  diagnostics.rs  errors.rs  experiments.rs  lifecycle.rs  mod.rs  notifications.rs  resample.rs  shared.rs  test_support.rs
src/cli/: command.rs  help.rs  mod.rs  term.rs
src/client_net/: mls_actor.rs  voice.rs
src/tui/: chrome.rs  client_thread.rs  editor.rs  focus.rs  form.rs  history_search.rs  mod.rs  mode.rs  modes.rs  overlay.rs  render.rs  room_settings.rs  user_list.rs  view.rs  widgets.rs
src/ui/: form.rs  mod.rs  select.rs  settings.rs  vu.rs  welcome.rs
src/video/: capture.rs  fanout.rs  mod.rs  nut.rs  publisher.rs  subscriber.rs
tests/: mdns_netns.rs  rpc_boundary.rs
tests/mixer_vectors/: combiner_input_a.txt  combiner_input_b.txt  combiner_input_hot_a.txt  combiner_input_hot_b.txt  combiner_one_no_limiter.txt  (+6 more)
web/: README.md  gen-embed.mjs  index.html  package.json  vite.config.ts
(+329 files in other folders)
