[package]
name = "chatt"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = { path = "crates/cpal" }
libc = "0.2"
nnnoiseless = { version = "0.5.2", default-features = false }
extui = { git = "https://github.com/exrok/extui", rev = "0db2ec429bc437f4d330b24e7642e539c44b8a6a", features = ["bracketed-paste"] }
extui-editor = { git = "https://github.com/exrok/extui", rev = "0db2ec429bc437f4d330b24e7642e539c44b8a6a" }
extui-bindings = { git = "https://github.com/exrok/extui", rev = "0db2ec429bc437f4d330b24e7642e539c44b8a6a" }
bwrap.path = "crates/bwrap"
tinyhl = { git = "https://github.com/exrok/extui", rev = "0db2ec429bc437f4d330b24e7642e539c44b8a6a" }
unicode-width = "0.2"
opus-codec = { path = "crates/opus-codec", features = ["dred"] }
ring = "0.17.14"
jsony = "0.1.10"
rpc.path = "crates/rpc"
chatt-p2p.path = "crates/p2p"
mio = { version = "1.2.1", features = ["os-poll", "net"] }
kvlog = "0.1.5"
toml-spanner = { version = "1.0.3", features = [
    "to-toml",
    "from-toml",
    "derive",
] }
earshot = "1.1.0"
sonora = "0.1.0"
sonora-common-audio = "0.1.0"
foldhash = "0.2.0"
hashbrown = "0.17.1"
mimalloc = { version = "0.1.52", features = ["override"] }

[features]
default = []
pipewire = ["cpal/pipewire"]
# Presume AVX2/FMA in the bundled Opus build, removing its runtime CPU dispatch.
# Only sound on x86-64 CPUs that actually have AVX2. Pair it with
# `-C target-cpu=x86-64-v3`; the `cargo v3` alias in `.cargo/config.toml` does
# both. The default build leaves this off and stays portable.
avx2 = ["opus-codec/presume-avx2"]

[workspace]
members = [
    "crates/benchmark",
    "crates/p2p",
    "crates/rpc",
    "crates/server",
    "crates/bwrap",
    "crates/opus-codec",
]
exclude = ["crates/cpal"]

[patch.crates-io]
# Includes fix(aec3): prevent panic when shrinking adaptive FIR filter (#15).
sonora-aec3 = { git = "https://github.com/dignifiedquire/sonora", rev = "dec6a074725e82ef371a024fc45236d60f0acf52" }
sonora-common-audio = { git = "https://github.com/dignifiedquire/sonora", rev = "dec6a074725e82ef371a024fc45236d60f0acf52" }
sonora-fft = { git = "https://github.com/dignifiedquire/sonora", rev = "dec6a074725e82ef371a024fc45236d60f0acf52" }
sonora-simd = { git = "https://github.com/dignifiedquire/sonora", rev = "dec6a074725e82ef371a024fc45236d60f0acf52" }

[profile.dev]
debug = 0
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Opt-in CPU-targeted release. Same codegen as `release`, but a separate profile
# so its artifacts land in `target/release-v3/` and never clobber the portable
# `release` build (the two need different Opus C objects). The `cargo v3` alias
# in `.cargo/config.toml` selects this profile, the `avx2` feature, and
# `-C target-cpu=x86-64-v3` together.
[profile.release-v3]
inherits = "release"
