[package]
name = "chatt"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = { path = "crates/cpal", default-features = false }
libc = "0.2"
nnnoiseless = { path = "crates/nnnoiseless" }
extui = { git = "https://github.com/exrok/extui", rev = "0438812f44b0394c220c520effc5dbd38a86aa1a", features = [
    "bracketed-paste",
] }
extui-editor = { git = "https://github.com/exrok/extui", rev = "0438812f44b0394c220c520effc5dbd38a86aa1a" }
extui-bindings = { git = "https://github.com/exrok/extui", rev = "0438812f44b0394c220c520effc5dbd38a86aa1a" }
bwrap.path = "crates/bwrap"
tinyhl = { git = "https://github.com/exrok/extui", rev = "0438812f44b0394c220c520effc5dbd38a86aa1a" }
unicode-width = "0.2"
unicode-segmentation = "1"
opus-codec = { path = "crates/opus-codec", features = ["dred"] }
ring = "0.17.14"
jsony = "0.1.10"
rpc.path = "crates/rpc"
chatt-p2p.path = "crates/p2p"
darkhttp.path = "crates/darkhttp"
mio = { version = "1.2.1", features = ["os-poll", "net"] }
sendfd = "0.4.4"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
kvlog = "0.1.5"
annotate-snippets = "0.12.10"
toml-spanner = { version = "1.0.3", features = [
    "to-toml",
    "from-toml",
    "derive",
] }
earshot = "1.1.0"
zstd = "0.13"
sonora.path = "crates/sonora/crates/sonora"
sonora-agc2.path = "crates/sonora/crates/sonora-agc2"
sonora-common-audio.path = "crates/sonora/crates/sonora-common-audio/"
foldhash = "0.2.0"
hashbrown = "0.17.1"
imagesize = "0.14"
tempfile = "3.27.0"
mimalloc = { version = "0.1.52", features = ["override"], optional = true }
dhat = { version = "0.3", optional = true }
memchr = "2.8.3"

[features]
default = ["audio-realtime", "mimalloc-allocator"]
pipewire = ["cpal/pipewire"]
audio-realtime = ["cpal/realtime"]
audio-realtime-dbus = ["audio-realtime", "cpal/realtime-dbus"]
# Use mimalloc as the global allocator. On by default. Mutually exclusive with
# `dhat-heap`, which replaces the global allocator with the dhat profiler.
mimalloc-allocator = ["dep:mimalloc"]
# Heap profiling build. Swaps the global allocator for `dhat::Alloc` and arms a
# `dhat::Profiler` in `main`, writing `dhat-heap.json` on exit. Build it without
# the mimalloc allocator so the two never fight over the global slot:
#   cargo dhat            (TUI client, via the alias in .cargo/config.toml)
# See docs/profiling.md.
dhat-heap = ["dep:dhat"]
# Presume AVX2/FMA in bundled C audio code, removing runtime CPU dispatch where
# supported.
# Only sound on x86-64 CPUs that actually have AVX2. Pair it with
# `-C target-cpu=x86-64-v3`; the `cargo v3` alias in `.cargo/config.toml` does
# both. The default build leaves this off and stays portable.
avx2 = ["opus-codec/presume-avx2", "nnnoiseless/presume-avx2"]
# Bundle the built web frontend into the binary (served gzipped) instead of
# reading it from `web/dist` at runtime. Off by default. Requires building the
# committed `web/embedded` bundle and its asset resolver. Refresh them
# deliberately with `cd web && bun run build:embedded` when shipping web changes.
embed-web = []

[dev-dependencies]
portable-pty="0.9"
# The dev server, linked only for the in-crate end-to-end upload benchmark
# (`src/bench_upload.rs`) so it can drive a real server + clients over loopback.
server = { path = "crates/server" }

[workspace]
members = [
    "crates/benchmark",
    "crates/p2p",
    "crates/rpc",
    "crates/server",
    "crates/bwrap",
    "crates/opus-codec",
    "crates/nnnoiseless",
    "crates/darkhttp",
    "crates/pipewire-sys",
]
exclude = ["crates/cpal", "crates/sonora", "crates/pathify_svg"]

[profile.release]
debug = 1

[profile.dev]
debug = 0
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Opt-in CPU-targeted release. Same codegen as `release`, but a separate profile
# so its artifacts land in `target/release-v3/` and never clobber the portable
# `release` build (the two need different Opus C objects). The `cargo v3` alias
# in `.cargo/config.toml` selects this profile, the `avx2` feature, and
# `-C target-cpu=x86-64-v3` together.
[profile.release-v3]
inherits = "release"
debug = 1

# Heap-profiling build. Release codegen so the allocation pattern matches a real
# run, plus full debug info so dhat backtraces resolve to functions and lines.
# Artifacts land in `target/dhat/` and never clobber `release`.
[profile.dhat]
inherits = "release"
debug = "full"

[patch.crates-io]
pipewire-sys.path = "crates/pipewire-sys"
