[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"
default-run = "benchmark"

[dependencies]
aws-lc-rs = { version = "1.17.1", default-features = false, features = ["alloc", "non-fips"] }
jsony_bench = { rev = "04560c1f91ccbd3e2f3f21cfc9191142fbab5c7c", git = "https://github.com/exrok/jsony" }
# Use chatt's vendored RNNoise fork (not crates.io) so the isolated `rnnoise`
# route measures the exact engine chatt ships.
nnnoiseless = { path = "../nnnoiseless" }
opus-codec = { path = "../opus-codec", features = ["dred"] }
sonora = "0.1.0"
chatt = { path = "../.." }
local_rpc = { package = "chatt-local-rpc", path = "../local-rpc" }
rpc = { path = "../rpc" }

[features]
default = []
# Mirrors chatt's `avx2` feature so the optimized build can be profiled
# end to end. Enable alongside `-C target-cpu=x86-64-v3`.
avx2 = ["opus-codec/presume-avx2", "chatt/avx2", "nnnoiseless/presume-avx2"]
