[package]
name = "chatt-mls"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc.path = "../rpc"
jsony = "0.1.10"
aws-lc-rs = { version = "=1.16.3", default-features = false, features = [
    "alloc",
] }
aws-lc-sys = { version = "=0.40.0", optional = true }
mls-rs = { git = "https://github.com/awslabs/mls-rs", rev = "42131c9959efb1d3928428259bc89853027f730d", default-features = false, features = [
    "std",
    "private_message",
    "out_of_order",
    "external_client",
] }
mls-rs-core = { git = "https://github.com/awslabs/mls-rs", rev = "42131c9959efb1d3928428259bc89853027f730d", default-features = false, features = [
    "std",
] }
mls-rs-crypto-awslc = { git = "https://github.com/awslabs/mls-rs", rev = "42131c9959efb1d3928428259bc89853027f730d" }
mls-rs-provider-redb.path = "../mls-rs-provider-redb"

[dev-dependencies]
tempfile = "3.27.0"
