[package]
name = "chatt-mls"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc.path = "../rpc"
jsony = "0.1.10"
aws-lc-rs = { version = "=1.17.1", default-features = false, features = [
    "alloc",
    "non-fips",
] }
aws-lc-sys = { version = "=0.42.0", optional = true }
mls-rs = { path = "../mls-rs", default-features = false, features = [
    "std",
    "private_message",
    "out_of_order",
    "external_client",
] }
mls-rs-core = { path = "../mls-rs-core", default-features = false, features = [
    "std",
] }
mls-rs-crypto-awslc = { path = "../mls-rs-crypto-awslc", default-features = false, features = [
    "non-fips",
    "curve25519-aes128-only",
] }
mls-rs-provider-redb.path = "../mls-rs-provider-redb"

[dev-dependencies]
tempfile = "3.27.0"
