# Vendored fork of nnnoiseless 0.5.1 (BSD-3-Clause, see COPYING/AUTHORS).
# Trimmed to the library only and extended with tunable gain post-processing
# (`SuppressionParams`). Upstream: https://github.com/jneem/nnnoiseless
[package]
name = "nnnoiseless"
version = "0.5.1"
edition = "2018"
license = "BSD-3-Clause"
description = "Audio denoising derived from Xiph's RNNoise (vendored fork with tunable suppression)"
publish = false

[features]
default = []
dasp = ["dep:dasp", "dep:dasp_interpolate", "dep:dasp_ring_buffer"]

[lib]
bench = false

[dependencies]
easyfft = "0.4.1"
once_cell = "1.9.0"
dasp = { version = "0.11.0", features = ["signal"], optional = true }
dasp_interpolate = { version = "0.11.0", features = ["sinc"], optional = true }
dasp_ring_buffer = { version = "0.11.0", optional = true }
