# Vendored fork of nnnoiseless 0.5.1 (BSD-3-Clause, see COPYING/AUTHORS).
# Trimmed to the library only and extended with tunable gain post-processing
# (`SuppressionParams`). Upstream: https://github.com/jneem/nnnoiseless
[package]
name = "nnnoiseless"
version = "0.5.1"
edition = "2018"
license = "BSD-3-Clause"
description = "Audio denoising derived from Xiph's RNNoise (vendored fork with tunable suppression)"
publish = false

[features]
default = []
# Compile the bundled RNNoise objects with AVX2/FMA and skip runtime CPU
# dispatch. Intended for known x86-64-v3 hardware; the default build stays
# portable and selects SSE4.1/AVX2 kernels at runtime.
presume-avx2 = []

[lib]
bench = false

[build-dependencies]
cc = "1.0"
