[package]
name = "pipewire-sys"
edition = "2024"
description = "Rust FFI bindings for PipeWire, loaded at runtime via dlopen"
readme = "README.md"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire_sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]
version = "0.10.0"

[dependencies]
spa_sys = { package = "libspa-sys", version = "0.10" }
libloading = "0.8"

[build-dependencies]
bindgen = { version = "0.72.0", default-features = false }
pkg-config = "0.3"

[lib]
doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313
