[package]
name = "rpc"
version = "0.1.0"
edition = "2024"

[features]
default = ["toml"]
toml = ["chatt-ids/toml"]

[dependencies]
chatt-ids = { path = "../ids" }
chatt-video = { path = "../video" }
chatt-message-format = { path = "../message-format", default-features = false }
jsony = "0.1.10"
libc = "0.2"
mio = { version = "1.2.1", features = ["os-poll"] }
aws-lc-rs = { version = "1.17.1", default-features = false, features = ["alloc", "non-fips"] }
