[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chatt-server"
path = "src/main.rs"

[dependencies]
jsony = "0.1.10"
rpc.path = "../rpc"
chatt-mls.path = "../mls"
mio = { version = "1.2.1", features = ["os-poll", "net"] }
aws-lc-rs = "1.16.3"
kvlog = { git = "https://github.com/exrok/kvlog", rev = "0e3092abc1a0be07683b42e689a2acef7cf6014b" }
annotate-snippets = "0.12.10"
toml-spanner = { version = "1.0.3", features = [
    "to-toml",
    "from-toml",
    "derive",
] }
libc = "0.2"
foldhash = "0.2.0"
hashbrown = "0.17.1"
mimalloc = { version = "0.1.52", features = ["override"] }
redb = "4.1"

[dev-dependencies]
tempfile = "3.27.0"
